product/gradle-plugin/src/test/python/static_proxy/data/errors/kwargs.py
from java import *


kwargs = {a: 1, b: 2}

class D(static_proxy(**kwargs)):
    pass
